🔧 Updated DB config for Render deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 
 
 PORT=5000
-DB_HOST=127.0.0.1
+DB_HOST=sql12.freesqldatabase.com
 DB_PORT=3306
-DB_USER=root
+DB_USER=sql12789528
 DB_PASSWORD=phanindra1103
-DB_NAME=store_rating_db
+DB_NAME=sql12789528
 JWT_SECRET=123abc!@
